--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 RewriteEngine On
 
+RewriteBase /casa_linda/
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
 RewriteRule . index.php [L]
